# fruit_segmentation

./: .gitignore  README.md  pyproject.toml
config/: base_config.yaml  config_loader.py  convnext_baseline.yaml  convnext_unet.yaml  swin_baseline.yaml  swin_unet.yaml
dataset/: fruit_dataset.py
html/: phase1_baseline_dashboard.html  phase1_class_report.html  phase1_dashboard.html  phase2_dashboard.html
inference/: inference.py  webcam_inference.py
models/: __init__.py  convnext_baseline.py  convnext_unet.py  decoder.py  swin_baseline.py  swin_unet.py
notebooks/: fruit_segmentation_training.ipynb
tests/: test_config.py  test_dataset.py  test_models.py  test_prepare_dataset.py  test_utils.py
train/: train.py
utils/: checkpoint.py  engine.py  logger.py  metrics.py  prepare_dataset.py  transforms.py
visualization/: plot_metrics.py
